	  performing a dark ritual inside it.  The ritual requires the
	  reading of an arcane incantation, and the sacrifice of a holy
	  man inside the portal frame.

	- Fix long-standing bug that causes certain blocks (the modded
	  ones, e.g. soulsand, BTW aesthetic opaques) reappearing after
	  being mined.  It was caused by tools losing track of the
	  blocks against which they're effective.


v0.21
	- Automatic Update Check.  The server will automatically
	  check for new versions of Better With Renewables
	  periodically, and alert players upon joining if a
	  different version is available.

	- Change plant/animal/fungus cross-breeding requirements
	  to use the standard light level 7-8 pivot, so ender
	  spectacles can now be used to verify light level
	  requirements for cross-breeding, and cross-breeding
	  setups are less difficult to make.

	- Fix for "dud" villagers that refuse to trade.


v0.20
	- Significant villager trading nerfs.  Villagers now only
	  sell some finished tools and buy items for emeralds.
	  Emerald can now be treated as a distinct resource with its
	  own purpose, rather than an medium for shortcuts around
	  existing gameplay.

	- Dung can be stewed into blocks similar to string to wool.

	- Fixed Soul Press fire creation.

	- Made animal cross-breeding habitats easier to construct.

	- Added low-efficency recipes for extracting raw gold from
	  tools collected from ZP's, for obtaining hellfire from
	  ground netherrack, and for mixing gold and hellfire into
	  redstone, using equipment lower on the tech tree.

	- Soul Press now uses dung instead of sand for making
	  soul sand, resolving tech tree cycle when naturally-occuring
	  sand is not available.

	- Official Windows installation instructions included.


v0.19
	- Added cross-breeding of animals.  Chances of rarer animals
	  are influenced by (and require) a suitable environment.

	- It is now theoretically possible to access most of the tech