@@ -34,7 +34,7 @@ import net.minecraft.server.MinecraftServer;
 // external hooks and managed overall mod functionality.
 public class mod_BetterWithRenewables {
 	// Central mod meta-info strings, easily changeable for updates.
-	public static final String bwrVersionString = "0.22.0438";
+	public static final String bwrVersionString = "0.22.0437b";
 	public static final boolean bwrDevVersion = true;
 	public static final String bwrProductString = "Better With Renewables";
 	public static final String bwrAbbrString = "BWR";
@@ -199,6 +199,7 @@ public class mod_BetterWithRenewables {
 			ReplaceBlock(BlockLilyPad.class, BWRBlockLilyPad.class);
 			ReplaceBlock(BlockSoulSand.class, BWRBlockSoulSand.class);
 			ReplaceBlock(BlockRedstoneWire.class, BWRBlockRedstoneWire.class);
+			ReplaceBlock(BlockGrass.class, BWRBlockGrass.class);
 
 			// After replacing blocks, some tool items have references to the old blocks by reference instead
 			// of by ID in their list of blocks against which they're effective.  Search through and replace all
